--- a/Changes
+++ b/Changes
@@ -6,7 +6,7 @@ List of significant changes to Data::Tumbler
 
 =cut
 
-=head2 Changes in Data::Tumbler 0.001
+=head2 Changes in Data::Tumbler 0.001 - 15th March 2014
 
   Initial release base on work in https://github.com/perl5-dbi/DBI-Test
 
