--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module Data::Tumbler
 
+0.007	2014-12-12
+    - add GPL-1 license text as it's fulfilling basic requirements
+
 0.006	2014-12-08
     - Improve Kwalitee
     - deploy correct licenses
