--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module Data::Tumbler
 
+0.009_002	2015-03-23
+    - fix tests for $] < 5.008
+    - fix typo in newly added pod sections
+
 0.009_001	2015-03-19
     - relax minimum perl to 5.6 since it runs fine in LMU on 5.6
     - add POD sections for author, support, copyright, ...
