--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl module Data::Tumbler
 
+0.010	2015-03-27
+    - release 0.009_002 with a stable version number
+
 0.009_002	2015-03-23
     - fix tests for $] < 5.008
     - fix typo in newly added pod sections
